# lematerial-hasher

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Contributing.md  LICENSE  README.md  pyproject.toml  requirements_slices.txt
configs/: default.yaml  disordered_structures.yaml
docs/source/: about.rst  conf.py  index.rst
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/partials/: webfonts.html
src/examples/: experiments_external_datasets.ipynb
src/material_hasher/: __init__.py  types.py
src/material_hasher/benchmark/: disordered.py  run.py  run_disordered.py  run_time.py  run_transformations.py  test_cases.py  transformations.py  utils.py
src/material_hasher/hasher/: __init__.py  base.py  bawl.py  entalpic.py  example.py  pdd.py  slices.py
src/material_hasher/hasher/utils/: graph.py  graph_structure.py  symmetry.py
src/material_hasher/hashers/: __init__.py  lehash.py
src/material_hasher/similarity/: __init__.py  base.py  eqv2.py  structure_matchers.py
src/material_hasher/similarity/utils/: utils_experiments.py
src/material_hasher/tests/benchmark/: test_run.py
