[project]
name = "material-hasher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "vict0rsch", email = "victor.schmidt@entalpic.ai" }]
requires-python = ">=3.10"
dependencies = [
    "pymatgen>=2024.11.13",
    "structuregraph-helpers>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
